Generate with openapi instead of raml
