# src/main/java/be/ae/rest/AccountController.java
@@ -1,69 +1,0 @@
-
-package be.ae.rest;
-
-import java.net.URI;
-import java.util.List;
-import javax.validation.Valid;
-
-import be.ae.rest.model.Account;
-import be.ae.services.AccountService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
-
-/**
- * No description
- * (Generated with springmvc-raml-parser v.0.10.2)
- */
-@RestController
-@RequestMapping("/api/accounts")
-public class AccountController {
-
-    @Autowired
-    private AccountService accountService;
-
-    /**
-     * Get list of accounts
-     */
-    @RequestMapping(value = "", method = RequestMethod.GET)
-    public List<Account> getAccounts() {
-        return null; //TODO Autogenerated Method Stub. Implement me please.
-    }
-
-    /**
-     * Create new account
-     */
-    @RequestMapping(value = "", method = RequestMethod.POST)
-    public ResponseEntity<?> createAccount(@Valid @RequestBody Account account) {
-        Account result = accountService.createAccount(account);
-        URI uri = ServletUriComponentsBuilder
-                .fromCurrentRequest()
-                .path("/{id}")
-                .buildAndExpand(result.getId())
-                .toUri();
-        return ResponseEntity.created(uri).build();
-    }
-
-    /**
-     * Retrieve account details
-     */
-    @RequestMapping(value = "/{accountId}", method = RequestMethod.GET)
-    public ResponseEntity<Account> getAccountById(@PathVariable String accountId) {
-        return ResponseEntity.ok(new Account());
-    }
-
-    /**
-     * Delete account
-     */
-    @RequestMapping(value = "/{accountId}", method = RequestMethod.DELETE)
-    public ResponseEntity<?> deleteAccountById(@PathVariable String accountId) {
-        return null; //TODO Autogenerated Method Stub. Implement me please.
-    }
-
-}
