# src/main/resources/api.yml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   title: AccountService
 servers:
-  url: http://localhost:8080/api
+  - url: https://localhost:8080/api
 paths:
   /accounts:
     get:
@@ -14,19 +14,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Pet'
+                $ref: './schemas/accounts.schema.json'
         "404":
           description: Nothing found for your request
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
 
     post:
       summary: Create new account
@@ -34,22 +34,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/definitions/Pet'
+              $ref: './schemas/account.schema.json'
       responses:
         "201":
-          description: Object craeted successfully
+          description: Object created successfully
         "400":
           description: Bad request. The provided input does not comply to the contract.
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
   /accounts/{accountId}:
     description: Get account details
     get:
@@ -67,19 +67,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Pet'
+                $ref: './schemas/account.schema.json'
         "404":
           description: Nothing found for your request
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
     delete:
       description: Delete account
       parameters:
@@ -97,40 +97,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
+                $ref: './schemas/errorResource.schema.json'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/definitions/Error'
-
-definitions:
-  Pet:
-    type: "object"
-    required:
-      - id
-      - name
-    properties:
-      id:
-        type: integer
-        format: int64
-      name:
-        type: string
-      tag:
-        type: string
-  Pets:
-    type: array
-    items:
-      $ref: '#/definitions/Pet'
-  Error:
-    type: "object"
-    required:
-      - code
-      - message
-    properties:
-      code:
-        type: integer
-        format: int32
-      message:
-        type: string
+                $ref: './schemas/errorResource.schema.json'
